2019-1/231/users/4233/executions/1769_1580.log
== TEST (2019-05-26 00:02:38) 
-- CODE:
notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
f = -1
cf = 0
a = 0

while(i<tamanho):
	elif(notas[i]==-1):
		a = a + 1
		print(i)
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(i)

media = sum(notas)/size(notas)
print(media)

print(max(nome))
		
-- ERROR:
File "XXXX", line 12
    elif(notas[i]==-1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:03:08) 
-- CODE:
notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
f = -1
cf = 0
a = 0

while(i<tamanho):
	elif(notas[i]==-1):
		a = a + 1
		print(i)
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(i)
	i = i + 1

media = sum(notas)/size(notas)
print(media)

print(max(nome))
		
-- ERROR:
File "XXXX", line 12
    elif(notas[i]==-1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:03:30) 
-- CODE:
notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
f = -1
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
		print(i)
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(i)
	i = i + 1

media = sum(notas)/size(notas)
print(media)

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:04:07) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
f = -1
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
		print(i)
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(i)
	i = i + 1

media = sum(notas)/size(notas)
print(media)

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:05:38) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
f = -1
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
		print(i)
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(i)
	i = i + 1

media = sum(notas)/size(notas)
print(media)

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:07:35) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 1

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
		print(i)
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(i)
	i = i + 1

media = sum(notas)/size(notas)
print(media)

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:10:43) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(i)
	i = i + 1

media = sum(notas)/size(notas)
print(round(media,2))

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:11:50) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a - 2
		print(i)
	i = i + 1

media = sum(notas)/size(notas)
print(round(media,2))

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:12:47) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(a)
	i = i + 1

media = sum(notas)/size(notas)
print(round(media,2))

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 00:13:55) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
		i = i + 1
	elif(notas[i]>cf):
		cf = cf + 1
		i = i + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(a)

media = sum(notas)/size(notas)
print(round(media,2))

print(max(nome))
		
-- EXECUTION TIME:
0.520128
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1769/1580/main.py", line 20, in <module>
    elif(notas[i]<cf and notas!=-1.0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:13:57) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
		i = i + 1
	elif(notas[i]>cf):
		cf = cf + 1
		i = i + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(a)

media = sum(notas)/size(notas)
print(round(media,2))

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 00:15:04) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(a)
	i = i + 1
   
media = sum(notas)/size(notas)
print(round(media,2))

print(max(nome))
		
-- EXECUTION TIME:
0.52775
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1769/1580/main.py", line 18, in <module>
    elif(notas[i]<cf and notas!=-1.0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:15:15) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(a)
	i = i + 1
   
media = sum(notas)/size(notas)
print(round(media,2))

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:15:39) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(a)
	i = i + 1
   
media = sum(notas)/size(nomes)
print(round(media,2))

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:16:07) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = 0

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(a)
	i = i + 1
   
media = sum(notas)/size(nome)
print(round(media,2))

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:16:58) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
cf = 0
a = -1

while(i<tamanho):
	if(notas[i]==-1):
		a = a + 1
	elif(notas[i]>cf):
		cf = cf + 1
		print(i)
	elif(notas[i]<cf and notas!=-1.0):
		a = a + 1
		print(a)
	i = i + 1
   
media = sum(notas)/size(nome)
print(round(media,2))

print(max(nome))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:51:56) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
a = 0
p = 0
r = 0
m = 0


while(i<tamanho):
	if(notas[i]==-1.0):
		a = a + 1
	elif(notas[i]>=6.0 and notas[i]<=10.0):
		p = p + 1
	elif(notas[i]!=-1.0 and notas[i]<6.0):
		r = r + 1
	elif(notas[i]>=0 and notas[i]<=10.0):
		quantidade = quantidade + 1
	i = i + 1
while(notas[m]!=max(notas)):
	m = m + 1

soma=sum(notas)+(a*1)
somas=size(notas)-a
media = soma/somas

print(a)
print(p)
print(r)
print(round(media,2))
print(m)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:56:22) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
a = 0
p = 0
r = 0
m = 0


while(i<tamanho):
	if(notas[i]==-1.0):
		a = a + 1
	elif(notas[i]>=6.0 and notas[i]<=10.0):
		p = p + 1
	elif(notas[i]!=-1.0 and notas[i]<6.0):
		r = r + 1
	elif(notas[i]>=0 and notas[i]<=10.0):
		quantidade = quantidade + 1
	i = i + 1
while(notas[m]!=max(notas)):
	m = m + 1

soma=sum(notas)+(a*1)
somas=size(notas)-a
media = soma/somas

print(a)
print(p)
print(r)
print(round(media,2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:56:49) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
a = 0
p = 0
r = 0
m = 0


while(i<tamanho):
	if(notas[i]==-1.0):
		a = a + 1
	elif(notas[i]>=6.0 and notas[i]<=10.0):
		p = p + 1
	elif(notas[i]!=-1.0 and notas[i]<6.0):
		r = r + 1
	elif(notas[i]>=0 and notas[i]<=10.0):
		quantidade = quantidade + 1
	i = i + 1
while(notas[m]!=max(notas)):
	m = m + 1

soma=sum(notas)+(a*1)
somas=size(notas)-a
media = soma/somas

print(a)
print(p)
print(r)
print(round(media,2))
print(nomes[m])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:57:16) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nome = array(eval(input("Digite o nome:  ")))

tamanho = size(notas)

i = 0
a = 0
p = 0
r = 0
m = 0


while(i<tamanho):
	if(notas[i]==-1.0):
		a = a + 1
	elif(notas[i]>=6.0 and notas[i]<=10.0):
		p = p + 1
	elif(notas[i]!=-1.0 and notas[i]<6.0):
		r = r + 1
	elif(notas[i]>=0 and notas[i]<=10.0):
		quantidade = quantidade + 1
	i = i + 1
while(notas[m]!=max(notas)):
	m = m + 1

soma=sum(notas)+(a*1)
somas=size(notas)-a
media = soma/somas

print(a)
print(p)
print(r)
print(round(media,2))
print(nome[m])



-- EXECUTION TIME:
0.522468
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:00:57) 
-- CODE:
notas = array(eval(input("Digite o numero: ")))
nomes = array(eval(input("Digite o numero: ")))

tamamnho = size(notas)

i = 0
f = 0
r = 0

while(i<tamanho):
	if(notas[i]==-1.0):
		f = f + 1
	elif(notas[i]>=6.0 and notas[i]<=10.0):
		p = p + 1
	elif(notas[i]!=-1.0 and notas[i]<6.0):
		r = r +  1
	elif(notas[i]>=0 and notas[i]<=10.0):
		tot = tot + 1
	i = i + 1
	
while(notas[m]>max(notas)):
	m = m + 1
	
media = ((sum(notas)+f)/(size(notas)-f))

print(f)
print(p)
print(r)
print(round(media,2))
print(nomes[m])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:01:24) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nomes = array(eval(input("Digite o numero: ")))

tamamnho = size(notas)

i = 0
f = 0
r = 0

while(i<tamanho):
	if(notas[i]==-1.0):
		f = f + 1
	elif(notas[i]>=6.0 and notas[i]<=10.0):
		p = p + 1
	elif(notas[i]!=-1.0 and notas[i]<6.0):
		r = r +  1
	elif(notas[i]>=0 and notas[i]<=10.0):
		tot = tot + 1
	i = i + 1
	
while(notas[m]>max(notas)):
	m = m + 1
	
media = ((sum(notas)+f)/(size(notas)-f))

print(f)
print(p)
print(r)
print(round(media,2))
print(nomes[m])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:02:12) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nomes = array(eval(input("Digite o numero: ")))

tamanho = size(notas)

i = 0
f = 0
r = 0

while(i<tamanho):
	if(notas[i]==-1.0):
		f = f + 1
	elif(notas[i]>=6.0 and notas[i]<=10.0):
		p = p + 1
	elif(notas[i]!=-1.0 and notas[i]<6.0):
		r = r +  1
	elif(notas[i]>=0 and notas[i]<=10.0):
		tot = tot + 1
	i = i + 1
	
while(notas[m]>max(notas)):
	m = m + 1
	
media = ((sum(notas)+f)/(size(notas)-f))

print(f)
print(p)
print(r)
print(round(media,2))
print(nomes[m])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:03:02) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nomes = array(eval(input("Digite o numero: ")))

tamanho = size(notas)

i = 0
f = 0
p = 0
r = 0
m = 0

while(i<tamanho):
	if(notas[i]==-1.0):
		f = f + 1
	elif(notas[i]>=6.0 and notas[i]<=10.0):
		p = p + 1
	elif(notas[i]!=-1.0 and notas[i]<6.0):
		r = r +  1
	elif(notas[i]>=0 and notas[i]<=10.0):
		tot = tot + 1
	i = i + 1
	
while(notas[m]>max(notas)):
	m = m + 1
	
media = ((sum(notas)+f)/(size(notas)-f))

print(f)
print(p)
print(r)
print(round(media,2))
print(nomes[m])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:03:53) 
-- CODE:
from numpy import*

notas = array(eval(input("Digite o numero: ")))
nomes = array(eval(input("Digite o numero: ")))

tamanho = size(notas)

i = 0
f = 0
p = 0
r = 0
m = 0

while(i<tamanho):
	if(notas[i]==-1.0):
		f = f + 1
	elif(notas[i]>=6.0 and notas[i]<=10.0):
		p = p + 1
	elif(notas[i]!=-1.0 and notas[i]<6.0):
		r = r +  1
	elif(notas[i]>=0 and notas[i]<=10.0):
		tot = tot + 1
	i = i + 1
	
while(notas[m]!=max(notas)):
	m = m + 1
	
media = ((sum(notas)+f)/(size(notas)-f))

print(f)
print(p)
print(r)
print(round(media,2))
print(nomes[m])
-- EXECUTION TIME:
0.445673
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
